syntax = "proto3";

package user;

option go_package = "api-gateway/pb/user;user";

import "google/protobuf/empty.proto";

message UserRequest {
  int64 id = 1;
  string email = 2;
  string name = 3;
  string password = 4;
}

message UserResponse {
  int64 id = 1;
  string email = 2;
  string name = 3;
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  bool success = 1;
  string message = 2;
  UserResponse user = 3;
}

message UserID {
  int64 id = 1;
}

message UserProfile {
  int64 id = 1;
  string email = 2;
  string name = 3;
}

service UserService {
  rpc RegisterUser(UserRequest) returns (UserResponse);
  rpc AuthenticateUser(AuthRequest) returns (AuthResponse);
  rpc GetUserProfile(UserID) returns (UserProfile);
  rpc UpdateUser(UserRequest) returns (UserResponse);
  rpc DeleteUser(UserID) returns (google.protobuf.Empty);
}
